chore: student http and rpc
